--- a/drupal-8/src/ciam_loginradius/composer.json
+++ b/drupal-8/src/ciam_loginradius/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "drupal/lr_ciam",
     "require": {
-        "loginradius/php-sdk-2.0": "dev-master"
+        "loginradius/php-sdk": "4.3.0"
     }
 }
