--- a/drupal-8/src/ciam_loginradius/lr_ciam/lr_ciam.info.yml
+++ b/drupal-8/src/ciam_loginradius/lr_ciam/lr_ciam.info.yml
@@ -3,6 +3,6 @@ type: module
 description: 'Allow users to sign up through a registration form. User Registration offers fully customized options for collecting and updating user data.'
 package: CIAM LoginRadius
 configure: lr_ciam.settings_form
-version: '8.x-3.0.0'
+version: '3.1.0'
 core: '8.x'
 project: '"ciam_loginradius"'
