--- a/drupal-8/src/ciam_loginradius/lr_ciam/lr_ciam.links.task.yml
+++ b/drupal-8/src/ciam_loginradius/lr_ciam/lr_ciam.links.task.yml
@@ -7,12 +7,12 @@ lr_ciam.change_password:
 
 lr_ciam.settings_form:
   route_name: lr_ciam.settings_form
-  title: 'User registration settings'
+  title: 'Activation'
   base_route: lr_ciam.settings_form
 
 advanced.settings_form:
   route_name: advanced.settings_form
-  title: 'Advanced settings'
+  title: 'CIAM Settings'
   base_route: lr_ciam.settings_form
     
 
