--- a/drupal-8/src/ciam_loginradius/lr_sso/lr_sso.info.yml
+++ b/drupal-8/src/ciam_loginradius/lr_sso/lr_sso.info.yml
@@ -5,6 +5,6 @@ package: CIAM LoginRadius
 dependencies:
   - lr_ciam
 configure: lr_sso.settings_form
-version: '8.x-3.0.0'
+version: '3.1.0'
 core: '8.x'
 project: '"ciam_loginradius"'
