--- a/drupal-8/src/customer_identity_and_access_management/composer.json
+++ b/drupal-8/src/customer_identity_and_access_management/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "drupal/customer_identity_and_access_management",
+    "description": "The LoginRadius Customer Identity and Access Management",
+    "type": "drupal-module",
     "require": {
-        "loginradius/php-sdk": "4.3.0"
-    }
+        "loginradius/php-sdk": "4.4.0"
+    },
+    "license": "GPL-2.0+"
 }
