--- a/drupal-8/src/customer_identity_and_access_management/lr_hostedpage/lr_hostedpage.info.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_hostedpage/lr_hostedpage.info.yml
@@ -6,5 +6,5 @@ dependencies:
   - lr_ciam
 core: 8.x
 configure: lr_hostedpage.settings_form
-version: 3.3.1
+version: '8.x-3.4'
 project: customer_identity_and_access_management
