--- a/drupal-8/src/customer_identity_and_access_management/lr_simple_oauth/lr_simple_oauth.info.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_simple_oauth/lr_simple_oauth.info.yml
@@ -2,7 +2,7 @@ name: LoginRadius Simple OAuth
 type: module
 description: LoginRadius OAuth authentication integration with Simple OAuth.
 core: 8.x
-version: 3.3.1
+version: '8.x-3.4'
 package: CIAM LoginRadius
 dependencies:
   - drupal:lr_ciam
