--- a/drupal-8/src/customer_identity_and_access_management/lr_ciam/lr_ciam.info.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_ciam/lr_ciam.info.yml
@@ -1,8 +1,8 @@
 name: CIAM
 type: module
-description: Allow users to sign up through a registration form. User Registration offers fully customized options for collecting and updating user data.
+description: 'Allow users to sign up through a registration form. User Registration offers fully customized options for collecting and updating user data.'
 package: CIAM LoginRadius
 configure: lr_ciam.settings_form
-version: '8.x-3.4'
-core: 8.x
-project: customer_identity_and_access_management
+version: '8.x-3.5'
+core: '8.x'
+project: '"customer_identity_and_access_management"'
