--- a/drupal-8/src/customer_identity_and_access_management/lr_hostedpage/lr_hostedpage.info.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_hostedpage/lr_hostedpage.info.yml
@@ -1,10 +1,10 @@
 name: Hosted Page
 type: module
-description: Allow users to sign up/login/forgot password etc on hosted pages.
+description: 'Allow users to sign up/login/forgot password etc on hosted pages.'
 package: CIAM LoginRadius
 dependencies:
   - lr_ciam
 core: 8.x
 configure: lr_hostedpage.settings_form
-version: '8.x-3.4'
-project: customer_identity_and_access_management
+version: '8.x-3.5'
+project: 'customer_identity_and_access_management'
