--- a/drupal-8/src/customer_identity_and_access_management/lr_hostedpage/lr_hostedpage.info.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_hostedpage/lr_hostedpage.info.yml
@@ -4,7 +4,7 @@ description: 'Allow users to sign up/login/forgot password etc on hosted pages.'
 package: CIAM LoginRadius
 dependencies:
   - lr_ciam
-core: 8.x
 configure: lr_hostedpage.settings_form
-version: '8.x-3.5'
+version: '8.x-3.6'
+core: '8.x'
 project: 'customer_identity_and_access_management'
