--- a/drupal-8/src/customer_identity_and_access_management/lr_simple_oauth/lr_simple_oauth.info.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_simple_oauth/lr_simple_oauth.info.yml
@@ -1,9 +1,10 @@
 name: LoginRadius Simple OAuth
 type: module
 description: LoginRadius OAuth authentication integration with Simple OAuth.
-core: 8.x
-version: '8.x-3.5'
 package: CIAM LoginRadius
 dependencies:
   - drupal:lr_ciam
   - drupal:simple_oauth
+version: '8.x-3.6'
+core: '8.x'
+project: 'customer_identity_and_access_management'
