--- a/drupal-8/src/customer_identity_and_access_management/lr_sso/lr_sso.info.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_sso/lr_sso.info.yml
@@ -5,6 +5,6 @@ package: CIAM LoginRadius
 dependencies:
   - lr_ciam
 configure: lr_sso.settings_form
-version: '8.x-3.5'
+version: '8.x-3.6'
 core: '8.x'
-project: '"customer_identity_and_access_management"'
+project: 'customer_identity_and_access_management'
