--- a/drupal-8/src/customer_identity_and_access_management/lr_sso/lr_sso.info.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_sso/lr_sso.info.yml
@@ -3,8 +3,8 @@ type: module
 description: 'Enable a single login system for multiple websites: users only need to log in once to get access to all of your web properties.'
 package: CIAM LoginRadius
 dependencies:
-  - lr_ciam
+  - drupal:lr_ciam
 configure: lr_sso.settings_form
-version: '8.x-3.14'
+version: '8.x-3.15'
 core: '8.x'
 project: 'customer_identity_and_access_management'
