--- a/drupal-8/src/customer_identity_and_access_management/lr_ciam/lr_ciam.links.menu.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_ciam/lr_ciam.links.menu.yml
@@ -1,5 +1,5 @@
 lr_ciam.settings_form:
-  title: CIAM LoginRadius
-  description: 'Configure settings for LoginRadius CIAM'
+  title: LoginRadius
+  description: 'Configure settings for LoginRadius'
   parent: user.admin_index
   route_name: lr_ciam.settings_form
