--- a/drupal-8/src/customer_identity_and_access_management/lr_ciam/lr_ciam.links.task.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_ciam/lr_ciam.links.task.yml
@@ -9,7 +9,13 @@ lr_ciam.settings_form:
   title: 'Activation'
   base_route: lr_ciam.settings_form
 
+authentication.settings_form:
+  route_name: authentication.settings_form
+  title: 'Authentication'
+  base_route: lr_ciam.settings_form
+
 advanced.settings_form:
   route_name: advanced.settings_form
-  title: 'CIAM Settings'
+  title: 'Advanced Settings'
   base_route: lr_ciam.settings_form
+  
