--- a/drupal-8/src/customer_identity_and_access_management/lr_ciam/lr_ciam.routing.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_ciam/lr_ciam.routing.yml
@@ -21,17 +21,26 @@ lr_ciam.user_register_validate:
 lr_ciam.settings_form:
   path: 'admin/config/people/ciam'
   defaults:
-    _title: 'CIAM settings'
+    _title: 'LoginRadius'
     _form: '\Drupal\lr_ciam\Form\CiamSettingsForm'
   requirements:
-    _permission: 'administer user registration settings'
+    _permission: 'administer user activation settings'
   options:
     no_cache: TRUE
+
+authentication.settings_form:
+  path: 'admin/config/people/ciam/authentication'
+  defaults:
+    _title: 'LoginRadius'
+    _form: '\Drupal\lr_ciam\Form\AuthenticationSettingsForm'
+  requirements:
+    _permission: 'administer user authentication settings'   
 
 advanced.settings_form:
   path: 'admin/config/people/ciam/advanced'
   defaults:
-    _title: 'CIAM Loginradius'
+    _title: 'LoginRadius'
     _form: '\Drupal\lr_ciam\Form\AdvancedSettingsForm'
   requirements:
-    _permission: 'administer user registration settings'   
+    _permission: 'administer user advanced settings'   
+    
