--- a/drupal-8/src/customer_identity_and_access_management/lr_sso/lr_sso.routing.yml
+++ b/drupal-8/src/customer_identity_and_access_management/lr_sso/lr_sso.routing.yml
@@ -1,7 +1,7 @@
 lr_sso.settings_form:
   path: 'admin/config/people/ciam/sso'
   defaults:
-    _title: 'sso settings'
+    _title: 'LoginRadius'
     _form: '\Drupal\lr_sso\Form\SSOSettingsForm'
   requirements:
     _permission: 'administer user registration settings'
