--- a/drupal-9/src/customer_identity_and_access_management/lr_ciam/lr_ciam.services.yml
+++ b/drupal-9/src/customer_identity_and_access_management/lr_ciam/lr_ciam.services.yml
@@ -5,3 +5,7 @@ services:
     class: Drupal\lr_ciam\Routing\RouteSubscriber
     tags:
       - { name: event_subscriber } 
+  lr_ciam.http_middleware:
+    class: Drupal\lr_ciam\RedirectMiddleware
+    tags:
+      - { name: http_middleware }      
