Drupal 5.2.0(updating drupal9)
- Added the functionality to contol the SSO login based on the User Roles.
- Added Compatibility with our latest PHP SDK 11.4.2
- Added New field to a view using users as data source.

--- a/drupal-9/src/customer_identity_and_access_management/lr_sso/lr_sso.libraries.yml
+++ b/drupal-9/src/customer_identity_and_access_management/lr_sso/lr_sso.libraries.yml
@@ -2,8 +2,16 @@ drupal.coresso:
   header: true
   version: VERSION
   js:
-    js/sso_frontend.min.js: {weight: -8}
+    js/sso_backend.min.js: {weight: -8}
   dependencies:
     - core/jquery
     - core/drupalSettings
-    
+
+drupal.frontendSSO:
+  header: true
+  version: VERSION
+  js:
+    js/sso_frontend.min.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupalSettings
