--- a/drupal-10/src/customer_identity_and_access_management/lr_ciam/lr_ciam.info.yml
+++ b/drupal-10/src/customer_identity_and_access_management/lr_ciam/lr_ciam.info.yml
@@ -3,4 +3,9 @@ type: module
 description: 'Allow users to sign up through a registration form. User Registration offers fully customized options for collecting and updating user data.'
 package: CIAM LoginRadius
 configure: lr_ciam.settings_form
-core_version_requirement: ^9.4 || ^10
+# version: '5.2.0'
+core_version_requirement: ^9 || ^10
+# Information added by Drupal.org packaging script on 2023-10-25
+version: '5.2.0'
+project: 'customer_identity_and_access_management'
+datestamp: 1698240101
