--- a/drupal-10/src/customer_identity_and_access_management/lr_simple_oauth/lr_simple_oauth.info.yml
+++ b/drupal-10/src/customer_identity_and_access_management/lr_simple_oauth/lr_simple_oauth.info.yml
@@ -5,4 +5,11 @@ package: CIAM LoginRadius
 dependencies:
   - drupal:lr_ciam
   - drupal:simple_oauth
-core_version_requirement: ^9.4 || ^10
+# version: '5.2.0'
+core_version_requirement: ^9 || ^10
+# project: 'customer_identity_and_access_management'
+
+# Information added by Drupal.org packaging script on 2023-10-25
+version: '5.2.0'
+project: 'customer_identity_and_access_management'
+datestamp: 1698240101
